force-app/main/default/objects/Survey_Feedback__c/Survey_Feedback__c.object-meta.xml
<CustomObject>
    <description>Clicktools-built custom object to store feedback for Closed Case survey responses</description>
    <label>Survey Feedback</label>
    <nameField>
        <label>Survey Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>