force-app/main/default/objects/Survey_Feedback__c/fields/Achievement_Rating__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Rating__c</fullName>
    <inlineHelpText>NEEDS TO BE ADDED</inlineHelpText>
    <label>NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>