force-app/main/default/objects/Survey_Feedback__c/fields/Agree_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Contact__c</fullName>
    <inlineHelpText>Answer given in response to Q3 on CCS Helpdesk form (Clicktools Closed Case Survey):
Would you be happy to be contacted to discuss the issue further?</inlineHelpText>
    <label>Agree to Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>