force-app/main/default/objects/Survey_Feedback__c/fields/Case_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Date__c</fullName>
    <formula>DATEVALUE(Case__r.ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Close Date</label>
    <type>Date</type>
</CustomField>