force-app/main/default/objects/Survey_Feedback__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <formula>HYPERLINK(Case__r.Owner:User.Id,  Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>