force-app/main/default/objects/Survey_Feedback__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <formula>Case__r.Case_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>