force-app/main/default/objects/Survey_Feedback__c/fields/CCS_Helpdesk_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>CCS_Helpdesk_Satisfaction__c</fullName>
    <inlineHelpText>Answer given in response to Q6 on CCS Helpdesk form (Clicktools Closed Case Survey NPS):
Finally, on a scale of 1-10 overall how satisfied are you with the customer service centre performance?</inlineHelpText>
    <label>CCS Helpdesk Satisfaction</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>