force-app/main/default/objects/Survey_Feedback__c/fields/CCS_Team__c.field-meta.xml
<CustomField>
    <fullName>CCS_Team__c</fullName>
    <formula>TEXT(Case__r.CCS_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Team</label>
    <type>Text</type>
</CustomField>