force-app/main/default/objects/Survey_Feedback__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <label>Completion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>