force-app/main/default/objects/Survey_Feedback__c/fields/Contact_Tel_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tel_Number__c</fullName>
    <inlineHelpText>Answer given in response to Q4 on CCS Helpdesk form (Clicktools Closed Case Survey):
Please enter your telephone number</inlineHelpText>
    <label>Contact Tel. Number</label>
    <type>Phone</type>
</CustomField>