force-app/main/default/objects/Survey_Feedback__c/fields/Date_Response_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Response_Submitted__c</fullName>
    <inlineHelpText>Date upon which the Closed Case survey response was submitted by the participant</inlineHelpText>
    <label>Date Response Submitted</label>
    <type>Date</type>
</CustomField>