force-app/main/default/objects/Survey_Feedback__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <formula>IF(Achievement_Rating__c&lt;7,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>