force-app/main/default/objects/Survey_Feedback__c/fields/Did_Well__c.field-meta.xml
<CustomField>
    <fullName>Did_Well__c</fullName>
    <label>Did Well</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>