force-app/main/default/objects/Survey_Feedback__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <label>Documentation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>