force-app/main/default/objects/Survey_Feedback__c/fields/Improve__c.field-meta.xml
<CustomField>
    <fullName>Improve__c</fullName>
    <label>Improve</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>