force-app/main/default/objects/Survey_Feedback__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <inlineHelpText>Answer given in response to Q5 on CCS Helpdesk form (Clicktools Closed Case Survey NPS): On a scale of 1-10, how satisfied were you with the knowledge of our Customer Service Centre personnel when dealing with your query?</inlineHelpText>
    <label>Knowledge</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>