force-app/main/default/objects/Survey_Feedback__c/fields/KnowledgeProf__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeProf__c</fullName>
    <label>KnowledgeProf</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>