force-app/main/default/objects/Survey_Feedback__c/fields/NPS_Rating__c.field-meta.xml
<CustomField>
    <fullName>NPS_Rating__c</fullName>
    <formula>IF( Promoter__c = 1, &quot;Promotor&quot;, IF( Passive_del__c = 1, &quot;Passive&quot;, IF( Detractor__c = 1, &quot;Detractor&quot;, &quot;No Rating&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Rating</label>
    <type>Text</type>
</CustomField>