force-app/main/default/objects/Survey_Feedback__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Feedback (Organisation)</relationshipLabel>
    <relationshipName>Survey_Feedback1</relationshipName>
    <type>Lookup</type>
</CustomField>