force-app/main/default/objects/Survey_Feedback__c/fields/Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Group__c</fullName>
    <formula>Organisation__r.Parent_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Group</label>
    <type>Text</type>
</CustomField>