force-app/main/default/objects/Survey_Feedback__c/fields/Parent_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organisation__c</fullName>
    <formula>Organisation__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Organisation</label>
    <type>Text</type>
</CustomField>