force-app/main/default/objects/Survey_Feedback__c/fields/Passive_del__c.field-meta.xml
<CustomField>
    <fullName>Passive_del__c</fullName>
    <formula>IF(AND(Achievement_Rating__c&gt;6,Achievement_Rating__c&lt;9),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>