force-app/main/default/objects/Survey_Feedback__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <description>Captures customer response to &apos;Performance&apos; survey-question.  Currently used in Procurement-completion survey.</description>
    <inlineHelpText>Captures customer response to &apos;Performance&apos; survey-question.  Currently used in Procurement-completion survey.</inlineHelpText>
    <label>Performance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>