force-app/main/default/objects/Survey_Feedback__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>Captures customer response to &apos;Process&apos; question.  Currently used in Procurement-completion survey.</description>
    <inlineHelpText>Captures customer response to &apos;Process&apos; question.  Currently used in Procurement-completion survey.</inlineHelpText>
    <label>Process</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>