force-app/main/default/objects/Survey_Feedback__c/fields/Procurement_Tier__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Tier__c</fullName>
    <formula>TEXT(Case__r.Sourcing_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procurement Tier</label>
    <type>Text</type>
</CustomField>