force-app/main/default/objects/Survey_Feedback__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>