force-app/main/default/objects/Survey_Feedback__c/fields/Resolve__c.field-meta.xml
<CustomField>
    <fullName>Resolve__c</fullName>
    <inlineHelpText>Answer given in response to Q3 on CCS Helpdesk form (Clicktools Closed Case Survey NPS): On a scale of 1-10, how satisfied were you with the time taken to resolve your query?</inlineHelpText>
    <label>Resolve</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>