force-app/main/default/objects/Survey_Feedback__c/fields/Respond__c.field-meta.xml
<CustomField>
    <fullName>Respond__c</fullName>
    <inlineHelpText>Answer given in response to Q2 on CCS Helpdesk form (Clicktools Closed Case Survey NPS): On a scale of 1-10, how satisfied were you with the time taken to respond to your query?</inlineHelpText>
    <label>Respond</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>