force-app/main/default/objects/Survey_Feedback__c/fields/Response_URL__c.field-meta.xml
<CustomField>
    <fullName>Response_URL__c</fullName>
    <inlineHelpText>URL of the submitted survey response</inlineHelpText>
    <label>Response URL</label>
    <type>Url</type>
</CustomField>