force-app/main/default/objects/Survey_Feedback__c/fields/RNPS__c.field-meta.xml
<CustomField>
    <fullName>RNPS__c</fullName>
    <label>Relational NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>