force-app/main/default/objects/Survey_Feedback__c/fields/Service_Operations_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Service_Operations_Pillar__c</fullName>
    <formula>Case__r.Service_Operations_Pillar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Operations Pillar</label>
    <type>Text</type>
</CustomField>