force-app/main/default/objects/Survey_Feedback__c/fields/Support_Classification__c.field-meta.xml
<CustomField>
    <fullName>Support_Classification__c</fullName>
    <formula>TEXT(Case__r.HD_Support_Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Classification</label>
    <type>Text</type>
</CustomField>