force-app/main/default/objects/Survey_Feedback__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <inlineHelpText>Name of Clicktools-built Survey</inlineHelpText>
    <label>Survey Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>