force-app/main/default/objects/Survey_Feedback__c/fields/Team_Lead_Comments__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Comments__c</fullName>
    <description>Comments field for Team leads to enter information regarding survey response</description>
    <inlineHelpText>Team leads, please use this field for entering comments regarding NPS scores.</inlineHelpText>
    <label>Team Lead Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>