force-app/main/default/objects/Survey_Feedback__c/fields/Understanding__c.field-meta.xml
<CustomField>
    <fullName>Understanding__c</fullName>
    <description>Captures customer response to &apos;Understanding&apos; survey-question.  Currently used in Procurement-completion survey.</description>
    <inlineHelpText>Captures customer response to &apos;Understanding&apos; survey-question.  Currently used in Procurement-completion survey.</inlineHelpText>
    <label>Understanding</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>