force-app/main/default/objects/Survey_Feedback__c/fields/VFM__c.field-meta.xml
<CustomField>
    <fullName>VFM__c</fullName>
    <label>VFM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>