force-app/main/default/objects/Survey_Feedback__c/listViews/Post_Tech_Support_Surveys.listView-meta.xml
<ListView>
    <fullName>Post_Tech_Support_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Contact__c</columns>
    <columns>Organisation__c</columns>
    <columns>Achievement_Rating__c</columns>
    <columns>CCS_Helpdesk_Satisfaction__c</columns>
    <columns>Date_Response_Submitted__c</columns>
    <columns>Did_Well__c</columns>
    <columns>Improve__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Achievement_Rating__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Case_Record_Type__c</field>
        <operation>equals</operation>
        <value>Tech_Support</value>
    </filters>
    <label>Post Tech-Support Surveys</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>